# kanata

./: .gitattributes  .gitignore  Cargo.toml  README.md  leptosfmt.toml
src/: app.rs  item.rs  main.rs  path.rs
src/command/: add.rs  clear.rs  list.rs  mod.rs  open.rs  serve.rs
style/: main.css
