[package]
name = "kanata-cli"
version = "0.1.5"
edition = "2024"
rust-version = "1.95"

[dependencies]
anyhow = "1.0"
bytes = "1.11"
futures = "0.3"
http = "1.4"
itertools = "0.14"
local-ip-address = "=0.6.10"
percent-encoding = "2.3"

[dependencies.axum]
version = "0.8"
features = ["macros", "ws"]

[dependencies.clap]
version = "4.5"
features = ["derive"]

[dependencies.maud]
version = "0.27"
features = ["axum"]

[dependencies.open]
version = "5.3"
features = ["shellexecute-on-windows"]

[dependencies.tokio]
version = "1.49"
features = ["full"]

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
strip = "symbols"
panic = "abort"

[lints.rust]
async_fn_in_trait = "allow"
dangling_pointers_from_temporaries = "deny"
unfulfilled_lint_expectations = "deny"
unsafe_op_in_unsafe_fn = "deny"
variant_size_differences = "warn"

[lints.clippy]
cast_precision_loss = "allow"
clone_on_ref_ptr = "deny"
dbg_macro = "deny"
enum_glob_use = "allow"
filetype_is_file = "deny"
get_unwrap = "deny"
large_enum_variant = "deny"
map_unwrap_or = "allow"
match_wildcard_for_single_variants = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
missing_safety_doc = "deny"
module_name_repetitions = "allow"
must_use_candidate = "allow"
needless_borrow = "deny"
needless_for_each = "allow"
rc_buffer = "deny"
rc_mutex = "deny"
rest_pat_in_fully_bound_structs = "deny"
similar_names = "allow"
struct_field_names = "allow"
unnecessary_safety_comment = "deny"
unsafe_derive_deserialize = "allow"
useless_conversion = "deny"

[lints.clippy.pedantic]
level = "deny"
priority = -1

[[bin]]
name = "kanata"
path = "src/main.rs"
